--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MSTERX\\MSTERX;Database=DataCenter;User Id=sa;Password=MsterXx123;TrustServerCertificate=True;"
+    "DefaultConnection": "Add Yours -_-"
   },
   "Logging": {
     "LogLevel": {
